node api service

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:test-node": "test/test-node/./bin/run start --config config/custom_config.json --overwrite-config",
+    "start:test-node": "test/test-node/./bin/run start --config test/test-node/config/custom_config.json --overwrite-config",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
