--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/platform-fastify": "^10.3.8",
+    "fastq": "^1.17.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
