--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "^7.0.4",
     "@klayr/client": "^6.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
@@ -28,6 +29,7 @@
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/platform-fastify": "^10.3.8",
     "@nestjs/platform-socket.io": "^10.3.8",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^10.3.8",
     "@prisma/client": "^5.14.0",
     "fastq": "^1.17.1",
