--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "npx prisma migrate dev --preview-feature --schema prisma/schema.prisma && nest start",
+    "prisma": "npx prisma migrate dev --preview-feature",
+    "start": "npm run prisma && nest start",
     "start:test-node": "test/test-node/./bin/run start --config test/test-node/config/custom_config.json --overwrite-config",
-    "start:dev": "npx prisma migrate dev --preview-feature --schema prisma/schema.prisma && nest start --watch",
+    "start:dev": "npm run prisma && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -23,6 +24,7 @@
   "dependencies": {
     "@fastify/static": "^7.0.4",
     "@klayr/client": "^6.0.3",
+    "@klayr/codec": "^0.4.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -31,7 +33,7 @@
     "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^10.3.8",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.15.0",
     "fastq": "^1.17.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -51,7 +53,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.14.0",
+    "prisma": "^5.15.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
