--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^10.3.8",
     "@prisma/client": "^5.15.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "fastq": "^1.17.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
