--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm ci
 
       - name: Run prisma
-        run: npx prisma migrate dev --preview-feature --schema prisma/test-schema.prisma
+        run: npm run prisma
 
       - name: Run tests
         run: npm run test
