--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/platform-fastify": "^10.3.8",
     "@nestjs/platform-socket.io": "^10.3.8",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^10.3.8",
     "@prisma/client": "^5.15.0",
