--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="file:./db/dev.db"
+DATABASE_URL="postgres://postgres:welcome@localhost/postgres"
 NODE_ENV="dev"
 NODE_URL="ws://127.0.0.1:7887/rpc-ws"
 PORT=9901
