--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:dev": "npm run prisma && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:migrate:prod": "prisma migrate deploy && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -34,7 +35,7 @@
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^10.3.8",
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.18.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "fastq": "^1.17.1",
@@ -56,7 +57,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.15.0",
+    "prisma": "^5.18.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
