--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:dev": "npm run prisma && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:migrate:prod": "prisma migrate deploy && npm run start:prod",
+    "start:migrate:prod": "npm run prisma migrate deploy && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
