--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "fastq": "^1.17.1",
+    "nestjs-loki-logger": "^0.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
