--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DATABASE_URL="postgres://postgres:welcome@localhost/postgres"
 NODE_ENV="dev"
 NODE_URL="ws://127.0.0.1:7887/rpc-ws"
 PORT=9901
+LOKI_URL="http://localhost:3100"
+LOKI_APP="local"
