--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NODE_URL="ws://127.0.0.1:7887/rpc-ws"
 PORT=9901
 LOKI_URL="http://localhost:3100"
 LOKI_APP="local"
+LOCK_ENDPOINTS_DURING_SYNC='true'
