--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/cqrs": "^10.2.7",
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/platform-fastify": "^10.3.8",
     "@nestjs/platform-socket.io": "^10.3.8",
