--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^10.3.8",
     "@prisma/client": "^5.18.0",
+    "async-mutex": "^0.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "fastq": "^1.17.1",
