--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "prisma": "npx prisma migrate dev --preview-feature",
     "start": "npm run prisma && nest start",
     "start:test-node": "test/test-node/./bin/run start --config test/test-node/config/custom_config.json --overwrite-config",
-    "start:dev": "npm run prisma && nest start --watch",
+    "start:dev": "npm run prisma && nest start --watch --inspect-brk",
     "start:debug": "nest start --debug --watch",
+    "start:debug-dev": "node --inspect-brk dist/main",
     "start:prod": "node dist/main",
     "start:migrate:prod": "prisma migrate deploy && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -37,7 +38,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/websockets": "^10.3.8",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.20.0",
     "async-mutex": "^0.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
