--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgres://postgres:welcome@localhost/postgres"
+DATABASE_URL="postgres://postgres:welcome@localhost/postgres?connection_limit=2"
 NODE_ENV="dev"
 NODE_URL="ws://127.0.0.1:7887/rpc-ws"
 PORT=9901
@@ -6,3 +6,4 @@ LOKI_URL="http://localhost:3100"
 LOKI_APP="local"
 LOCK_ENDPOINTS_DURING_SYNC="false"
 INDEX_KNOWN_ACCOUNTS="false"
+APP_REGISTRY_BRANCH="main"
