--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
+      - name: Run tests unit
+        run: npm run test
+
+      - name: Run tests e2e
         run: npm run test:e2e
